<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_login_layout"
    android:contextClickable="false"
    android:background="#F5F4FA">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/meuxamego_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="326dp"
        android:layout_height="40dp"
        android:autoSizeTextType="uniform"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorLink="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="314dp"
        android:layout_height="30dp"
        android:color="#d3d3d3"
        android:text="@string/access"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:background="@drawable/borda_fina"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:hint="E-mail"
        android:textColor="#a9a9a9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:background="@drawable/borda_fina"
        android:ems="10"
        android:padding="12dp"
        android:hint="Senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="22dp"
        android:autoSizeTextType="uniform"
        android:text="@string/forgot"
        android:textAlignment="center"
        android:textColor="#4E35A4"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="346dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4E35A4"
        android:elevation="6dp"
        android:text="Entrar"
        android:textColor="@color/white"
        android:onClick="Login"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <View
        android:id="@+id/linhaEsquerda"
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:background="#BDBDBD"
        app:layout_constraintBottom_toBottomOf="@+id/txtOu"
        app:layout_constraintEnd_toStartOf="@+id/txtOu"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/txtOu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtOu"
        app:layout_constraintVertical_bias="0.578" />

    <TextView
        android:id="@+id/txtOu"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:autoSizeTextType="uniform"
        android:text="@string/ou"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <ImageButton
        android:id="@+id/googleIcon"
        android:layout_width="48dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816"
        app:srcCompat="@drawable/google_icon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dontHave"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintTop_toBottomOf="@id/googleIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />


    <TextView
        android:id="@+id/textViewLinkCadastro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cadastre"
        android:textAlignment="center"
        android:textColor="#4E35A4"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintVertical_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintWidth_percent="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>